# finger-image-processing-and-feature-extraction

./: .gitattributes  .gitignore  METHODOLOGY.md  README.md  baseline_fingerprint_model.py  create_visuals.py  final_baseline_model.py  improved_baseline_model.py  main.py  pyproject.toml  split_dataset.py
output/models/: fingerprint_final_model.pth  fingerprint_model.pth
prototype/: baseline_model.py
src/: __init__.py  dataset.py  evaluation.py  models.py  recognition_system.py  training.py  utils.py
